--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,5 +1,9 @@
 {
     "recommendations": [
-        "esbenp.prettier-vscode"
+        "esbenp.prettier-vscode",
+        "ms-vscode.vscode-typescript-next",
+        "pkief.material-icon-theme",
+        "leizongmin.node-module-intellisense",
+        "christian-kohler.path-intellisense"
     ]
 }
