--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "baileys": "^6.7.17",
     "dotenv": "^16.5.0",
     "envalid": "^8.0.0",
+    "ioredis": "^5.6.1",
+    "mysql2": "^3.14.1",
     "path": "^0.12.7",
     "pino": "^9.7.0",
     "qrcode-terminal": "^0.12.0",
