Adicionar documentação JSDoc e atualizações de estilo
- Foram adicionados novos arquivos CSS para estilização do JSDoc: jsdoc-default.css, prettify-jsdoc.css e prettify-tomorrow.css.
- Foi implementado um logger completo em utils/logs/logger.js com documentação detalhada.
- As configurações do JSDoc foram definidas no arquivo jsdoc.json para incluir os arquivos fonte e excluir diretórios desnecessários.
- A saída HTML da documentação do logger foi aprimorada, com formatação adequada e navegação facilitada.

--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
   "homepage": "https://github.com/Kaikygr/OmniZap#readme",
   "scripts": {
     "start": "node src/index.js",
-    "dev": "nodemon src/index.js"
+    "dev": "nodemon src/index.js",
+    "docs": "jsdoc -c jsdoc.json"
   },
   "dependencies": {
     "@adiwajshing/keyed-db": "^0.2.4",
@@ -40,6 +41,7 @@
     "winston-daily-rotate-file": "^5.0.0"
   },
   "devDependencies": {
+    "jsdoc": "^4.0.4",
     "prettier": "^3.5.3"
   }
 }
