--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "winston-daily-rotate-file": "^5.0.0"
   },
   "devDependencies": {
+    "better-docs": "^2.7.3",
     "jsdoc": "^4.0.4",
     "prettier": "^3.5.3"
   }
