--- a/package.json
+++ b/package.json
@@ -22,8 +22,12 @@
   },
   "homepage": "https://github.com/Kaikygr/OmniZap#readme",
   "scripts": {
-    "start": "bash start.sh",
-    "dev": "nodemon src/index.js",
+    "start": "pm2 start ecosystem.config.js --env production",
+    "dev": "pm2 start ecosystem.config.js --env development",
+    "stop": "pm2 stop omnizap",
+    "restart": "pm2 restart omnizap",
+    "delete": "pm2 delete omnizap",
+    "logs": "pm2 logs omnizap",
     "docs": "jsdoc -c jsdoc.json"
   },
   "dependencies": {
